test/2/type/struct-field-follows-morph.err
test/2/type/struct-field-follows-morph.ploy:2:11-12: syntax error: positional field cannot follow a morph tag.
|   _ = (-t 0)
            ~
test/2/type/struct-field-follows-morph.ploy:2:8-10: note: first tag is here.
|   _ = (-t 0)
         ~~
